_build/default/lib/parser.output
   0  $accept : %entry% $end

   1  program : function_def_list EOF

   2  function_def_list :
   3                    | function_def_list function_def

   4  function_def : function_type ID LPAREN params RPAREN body

   5  function_type : VOID
   6                | INT

   7  params :
   8         | param
   9         | params COMMA param

  10  param : INT ID

  11  body : LBRACE stmt_list RBRACE

  12  stmt_list :
  13            | stmt_list stmt

  14  stmt : SEMI
  15       | expr SEMI
  16       | ID ASSIGN expr SEMI
  17       | INT ID ASSIGN expr SEMI
  18       | RETURN expr SEMI
  19       | RETURN SEMI
  20       | LBRACE stmt_list RBRACE
  21       | IF LPAREN expr RPAREN stmt
  22       | IF LPAREN expr RPAREN stmt ELSE stmt
  23       | WHILE LPAREN expr RPAREN stmt
  24       | BREAK SEMI
  25       | CONTINUE SEMI

  26  expr : NUM
  27       | ID
  28       | LPAREN expr RPAREN
  29       | SUB expr
  30       | NOT expr
  31       | expr ADD expr
  32       | expr SUB expr
  33       | expr MUL expr
  34       | expr DIV expr
  35       | expr MOD expr
  36       | expr EQ expr
  37       | expr NE expr
  38       | expr LT expr
  39       | expr GT expr
  40       | expr LE expr
  41       | expr GE expr
  42       | expr AND expr
  43       | expr OR expr
  44       | ID LPAREN args RPAREN

  45  args :
  46       | expr
  47       | args COMMA expr

  48  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (48)
	function_def_list : .  (2)

	.  reduce 2

	program  goto 3
	function_def_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (48)

	.  reduce 48


state 4
	program : function_def_list . EOF  (1)
	function_def_list : function_def_list . function_def  (3)

	EOF  shift 5
	INT  shift 6
	VOID  shift 7
	.  error

	function_def  goto 8
	function_type  goto 9


state 5
	program : function_def_list EOF .  (1)

	.  reduce 1


state 6
	function_type : INT .  (6)

	.  reduce 6


state 7
	function_type : VOID .  (5)

	.  reduce 5


state 8
	function_def_list : function_def_list function_def .  (3)

	.  reduce 3


state 9
	function_def : function_type . ID LPAREN params RPAREN body  (4)

	ID  shift 10
	.  error


state 10
	function_def : function_type ID . LPAREN params RPAREN body  (4)

	LPAREN  shift 11
	.  error


state 11
	function_def : function_type ID LPAREN . params RPAREN body  (4)
	params : .  (7)

	INT  shift 12
	COMMA  reduce 7
	RPAREN  reduce 7

	params  goto 13
	param  goto 14


state 12
	param : INT . ID  (10)

	ID  shift 15
	.  error


state 13
	function_def : function_type ID LPAREN params . RPAREN body  (4)
	params : params . COMMA param  (9)

	COMMA  shift 16
	RPAREN  shift 17
	.  error


state 14
	params : param .  (8)

	.  reduce 8


state 15
	param : INT ID .  (10)

	.  reduce 10


state 16
	params : params COMMA . param  (9)

	INT  shift 12
	.  error

	param  goto 18


state 17
	function_def : function_type ID LPAREN params RPAREN . body  (4)

	LBRACE  shift 19
	.  error

	body  goto 20


state 18
	params : params COMMA param .  (9)

	.  reduce 9


state 19
	body : LBRACE . stmt_list RBRACE  (11)
	stmt_list : .  (12)

	.  reduce 12

	stmt_list  goto 21


state 20
	function_def : function_type ID LPAREN params RPAREN body .  (4)

	.  reduce 4


state 21
	body : LBRACE stmt_list . RBRACE  (11)
	stmt_list : stmt_list . stmt  (13)

	INT  shift 22
	IF  shift 23
	WHILE  shift 24
	BREAK  shift 25
	CONTINUE  shift 26
	RETURN  shift 27
	ID  shift 28
	NUM  shift 29
	SEMI  shift 30
	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 33
	SUB  shift 34
	NOT  shift 35
	.  error

	stmt  goto 36
	expr  goto 37


state 22
	stmt : INT . ID ASSIGN expr SEMI  (17)

	ID  shift 38
	.  error


state 23
	stmt : IF . LPAREN expr RPAREN stmt  (21)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (22)

	LPAREN  shift 39
	.  error


state 24
	stmt : WHILE . LPAREN expr RPAREN stmt  (23)

	LPAREN  shift 40
	.  error


state 25
	stmt : BREAK . SEMI  (24)

	SEMI  shift 41
	.  error


state 26
	stmt : CONTINUE . SEMI  (25)

	SEMI  shift 42
	.  error


state 27
	stmt : RETURN . expr SEMI  (18)
	stmt : RETURN . SEMI  (19)

	ID  shift 43
	NUM  shift 29
	SEMI  shift 44
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 45


state 28
	stmt : ID . ASSIGN expr SEMI  (16)
	expr : ID .  (27)
	expr : ID . LPAREN args RPAREN  (44)

	ASSIGN  shift 46
	LPAREN  shift 47
	SEMI  reduce 27
	ADD  reduce 27
	SUB  reduce 27
	MUL  reduce 27
	DIV  reduce 27
	MOD  reduce 27
	AND  reduce 27
	OR  reduce 27
	LT  reduce 27
	GT  reduce 27
	LE  reduce 27
	GE  reduce 27
	EQ  reduce 27
	NE  reduce 27


state 29
	expr : NUM .  (26)

	.  reduce 26


state 30
	stmt : SEMI .  (14)

	.  reduce 14


state 31
	expr : LPAREN . expr RPAREN  (28)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 48


state 32
	stmt : LBRACE . stmt_list RBRACE  (20)
	stmt_list : .  (12)

	.  reduce 12

	stmt_list  goto 49


state 33
	body : LBRACE stmt_list RBRACE .  (11)

	.  reduce 11


state 34
	expr : SUB . expr  (29)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 50


state 35
	expr : NOT . expr  (30)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 51


state 36
	stmt_list : stmt_list stmt .  (13)

	.  reduce 13


state 37
	stmt : expr . SEMI  (15)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	SEMI  shift 52
	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	OR  shift 59
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	.  error


state 38
	stmt : INT ID . ASSIGN expr SEMI  (17)

	ASSIGN  shift 66
	.  error


state 39
	stmt : IF LPAREN . expr RPAREN stmt  (21)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (22)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 67


state 40
	stmt : WHILE LPAREN . expr RPAREN stmt  (23)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 68


state 41
	stmt : BREAK SEMI .  (24)

	.  reduce 24


state 42
	stmt : CONTINUE SEMI .  (25)

	.  reduce 25


state 43
	expr : ID .  (27)
	expr : ID . LPAREN args RPAREN  (44)

	LPAREN  shift 47
	SEMI  reduce 27
	COMMA  reduce 27
	RPAREN  reduce 27
	ADD  reduce 27
	SUB  reduce 27
	MUL  reduce 27
	DIV  reduce 27
	MOD  reduce 27
	AND  reduce 27
	OR  reduce 27
	LT  reduce 27
	GT  reduce 27
	LE  reduce 27
	GE  reduce 27
	EQ  reduce 27
	NE  reduce 27


state 44
	stmt : RETURN SEMI .  (19)

	.  reduce 19


state 45
	stmt : RETURN expr . SEMI  (18)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	SEMI  shift 69
	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	OR  shift 59
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	.  error


state 46
	stmt : ID ASSIGN . expr SEMI  (16)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 70


state 47
	expr : ID LPAREN . args RPAREN  (44)
	args : .  (45)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	COMMA  reduce 45
	RPAREN  reduce 45

	expr  goto 71
	args  goto 72


state 48
	expr : LPAREN expr . RPAREN  (28)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	RPAREN  shift 73
	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	OR  shift 59
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	.  error


state 49
	stmt_list : stmt_list . stmt  (13)
	stmt : LBRACE stmt_list . RBRACE  (20)

	INT  shift 22
	IF  shift 23
	WHILE  shift 24
	BREAK  shift 25
	CONTINUE  shift 26
	RETURN  shift 27
	ID  shift 28
	NUM  shift 29
	SEMI  shift 30
	LPAREN  shift 31
	LBRACE  shift 32
	RBRACE  shift 74
	SUB  shift 34
	NOT  shift 35
	.  error

	stmt  goto 36
	expr  goto 37


state 50
	expr : SUB expr .  (29)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 29


state 51
	expr : NOT expr .  (30)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 30


state 52
	stmt : expr SEMI .  (15)

	.  reduce 15


state 53
	expr : expr ADD . expr  (31)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 75


state 54
	expr : expr SUB . expr  (32)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 76


state 55
	expr : expr MUL . expr  (33)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 77


state 56
	expr : expr DIV . expr  (34)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 78


state 57
	expr : expr MOD . expr  (35)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 79


state 58
	expr : expr AND . expr  (42)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 80


state 59
	expr : expr OR . expr  (43)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 81


state 60
	expr : expr LT . expr  (38)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 82


state 61
	expr : expr GT . expr  (39)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 83


state 62
	expr : expr LE . expr  (40)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 84


state 63
	expr : expr GE . expr  (41)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 85


state 64
	expr : expr EQ . expr  (36)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 86


state 65
	expr : expr NE . expr  (37)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 87


state 66
	stmt : INT ID ASSIGN . expr SEMI  (17)

	ID  shift 43
	NUM  shift 29
	LPAREN  shift 31
	SUB  shift 34
	NOT  shift 35
	.  error

	expr  goto 88


state 67
	stmt : IF LPAREN expr . RPAREN stmt  (21)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (22)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	RPAREN  shift 89
	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	OR  shift 59
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	.  error


state 68
	stmt : WHILE LPAREN expr . RPAREN stmt  (23)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	RPAREN  shift 90
	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	OR  shift 59
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	.  error


state 69
	stmt : RETURN expr SEMI .  (18)

	.  reduce 18


state 70
	stmt : ID ASSIGN expr . SEMI  (16)
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	SEMI  shift 91
	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	OR  shift 59
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	.  error


state 71
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	args : expr .  (46)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	OR  shift 59
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	COMMA  reduce 46
	RPAREN  reduce 46


state 72
	expr : ID LPAREN args . RPAREN  (44)
	args : args . COMMA expr  (47)

	COMMA  shift 92
	RPAREN  shift 93
	.  error


state 73
	expr : LPAREN expr RPAREN .  (28)

	.  reduce 28


state 74
	stmt : LBRACE stmt_list RBRACE .  (20)

	.  reduce 20


state 75
	expr : expr . ADD expr  (31)
	expr : expr ADD expr .  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	SEMI  reduce 31
	COMMA  reduce 31
	RPAREN  reduce 31
	ADD  reduce 31
	SUB  reduce 31
	AND  reduce 31
	OR  reduce 31
	LT  reduce 31
	GT  reduce 31
	LE  reduce 31
	GE  reduce 31
	EQ  reduce 31
	NE  reduce 31


state 76
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr SUB expr .  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	SEMI  reduce 32
	COMMA  reduce 32
	RPAREN  reduce 32
	ADD  reduce 32
	SUB  reduce 32
	AND  reduce 32
	OR  reduce 32
	LT  reduce 32
	GT  reduce 32
	LE  reduce 32
	GE  reduce 32
	EQ  reduce 32
	NE  reduce 32


state 77
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr MUL expr .  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 33


state 78
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr DIV expr .  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 34


state 79
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr MOD expr .  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	.  reduce 35


state 80
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr AND expr .  (42)
	expr : expr . OR expr  (43)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	SEMI  reduce 42
	COMMA  reduce 42
	RPAREN  reduce 42
	AND  reduce 42
	OR  reduce 42


state 81
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)
	expr : expr OR expr .  (43)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	AND  shift 58
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	EQ  shift 64
	NE  shift 65
	SEMI  reduce 43
	COMMA  reduce 43
	RPAREN  reduce 43
	OR  reduce 43


state 82
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr LT expr .  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	SEMI  reduce 38
	COMMA  reduce 38
	RPAREN  reduce 38
	AND  reduce 38
	OR  reduce 38
	LT  reduce 38
	GT  reduce 38
	LE  reduce 38
	GE  reduce 38
	EQ  reduce 38
	NE  reduce 38


state 83
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr GT expr .  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	SEMI  reduce 39
	COMMA  reduce 39
	RPAREN  reduce 39
	AND  reduce 39
	OR  reduce 39
	LT  reduce 39
	GT  reduce 39
	LE  reduce 39
	GE  reduce 39
	EQ  reduce 39
	NE  reduce 39


state 84
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr LE expr .  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	SEMI  reduce 40
	COMMA  reduce 40
	RPAREN  reduce 40
	AND  reduce 40
	OR  reduce 40
	LT  reduce 40
	GT  reduce 40
	LE  reduce 40
	GE  reduce 40
	EQ  reduce 40
	NE  reduce 40


state 85
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr GE expr .  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	SEMI  reduce 41
	COMMA  reduce 41
	RPAREN  reduce 41
	AND  reduce 41
	OR  reduce 41
	LT  reduce 41
	GT  reduce 41
	LE  reduce 41
	GE  reduce 41
	EQ  reduce 41
	NE  reduce 41


state 86
	expr : expr . ADD expr  (31)
	expr : expr . SUB expr  (32)
	expr : expr . MUL expr  (33)
	expr : expr . DIV expr  (34)
	expr : expr . MOD expr  (35)
	expr : expr . EQ expr  (36)
	expr : expr EQ expr .  (36)
	expr : expr . NE expr  (37)
	expr : expr . LT expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . LE expr  (40)
	expr : expr . GE expr  (41)
	expr : expr . AND expr  (42)
	expr : expr . OR expr  (43)

	ADD  shift 53
	SUB  shift 54
	MUL  shift 55
	DIV  shift 56
	MOD  shift 57
	LT  shift 60
	GT  shift 61
	LE  shift 62
	GE  shift 63
	SEMI  reduce 36
	COMMA  reduce 36
	RPAREN  reduce 36
	AND  reduce 36
	OR  reduce 36
	EQ  reduce 36
	NE  reduce 36

